# VBaseLib

./: .gitmodules  CMakeLists.txt  README.md
VBase/: CMakeLists.txt  README.md
include/: VConfig.hxx.cmakein  VDefines.hxx  VTypeDefs.hxx  VVersion.hxx
src/: VVersion.cxx
